v1 of finalization - initial cut (still pending)

--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html >
+<html>
     <head>
         <meta charset="UTF-8">
-        <title>Login - Lambda101</title>
+        <title>AWSUGBLR - Email Repo Login</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<script src="js/jquery.min.js"></script>
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="login" >
-			<img src="./img/lambda.png" style="border-width:0px;max-width:35vw;max-height: 35vw;margin-left: 19px;">
+			<img src="./img/awsugblr.png" style="border-width:0px;max-width:35vw;max-height: 35vw;margin-left: 19px;">
 			<div class="row tag-margin">
 				<p id="error" class="tag-margin">*Please enter the correct Username/Password.</p>
 			</div>
@@ -40,7 +40,7 @@
 				</div>
 			</form>
 		</div>
-		<script src="js/Sha256Logic.js"></script>
-		<script src="js/lambda101.js"></script>
+		<script src="js/sha256logic.js"></script>
+		<script src="js/awsugblr.js"></script>
 	</body>
 </html>
