serverless changes to make it scalable for code expansion

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 		<link href="css/style.css" rel="stylesheet">
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<link href="./css/nsans.css" rel="stylesheet" type="text/css">
+		<link href="css/nsans.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="login" >
