--- a/web/contacts.html
+++ b/web/contacts.html
@@ -8,7 +8,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="./css/nsans.css" rel="stylesheet" type="text/css">
+        <link href="css/nsans.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<!-- <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
