Update contact page

--- a/web/addContact.html
+++ b/web/addContact.html
@@ -44,17 +44,16 @@
 		<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 			<div class="divider"></div>
 			<ul class="nav menu">
-				<li><a href="./users.html">Active Users</a></li>
-				<li><a href="./request_users.html">Login Requests</a></li>
-				<li><a href="./blocked_users.html">Blocked Users</a></li>
-				<li class="active"><a href="./generate_license.html">Generate License</a></li>
+				<li><a href="./contacts.html">Active Contacts</a></li>
+				<li><a href="./invalidContacts.html">Invalid Contacts</a></li>
+				<li class="active"><a href="./addContact.html">Add New Contact</a></li>
 			</ul>
 		</div><!--/.sidebar-->
 
         <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
 			<div class="row">
 				<div class="col-lg-12" style="margin: -10px 0px;">
-					<h1 class="page-header">Generate SNAuth License</h1>
+					<h1 class="page-header">Add New Contact</h1>
 				</div>
 			</div><!--/.row-->
 
@@ -63,14 +62,10 @@
 
                     <div class="snauth-page">
                         <form>
-                            <p id="common-error">Error : Enter Valid Email_ID</p>
+                            <p id="common-error">Error: Enter Valid Email_ID</p>
                             <div class="row">
                                 <div id="email-input" class="col-md-2">*Email :</div>
                                 <input class="col-md-7 common-style-input set-email-style" type="text" id="email" required="required" autofocus/>
-                                <div class="col-md-1 tooltip t-tip">
-                                    <a href="#"><span class="fa fa-info-circle"></span></a>
-                                    <span class="tooltiptext" style="width: 200px;margin-left: -100%;">Mention the customer email with which Serial No, Auth Code and License Key will be generated</span>
-                                </div>
                                 <button class="col-md-2 common-style-input btn-size" id="submit">Submit</button>
                             </div>
 
@@ -196,7 +191,7 @@
 				</div><!--/.col-->
 
 				<div class="col-sm-12 footer">
-                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://bridgei2i.com/">BRIDGEi2i Analytics Solutions</a></span></p>
+                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://awsugblr.in/">AWS User Group Bengaluru</a></span></p>
 				</div>
 			</div><!--/.row-->
 		</div>	<!--/.main-->
