Updated changes for add contact, active contact and invalid contacts

--- a/web/addContact.html
+++ b/web/addContact.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Dashboard</title>
+		<title>AWSUGBLR - Add Contacts</title>
 		<link rel="icon" href="img/Bi2i-square-logo-500x500.png" type="image/png" sizes="16x16">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
@@ -44,7 +44,7 @@
 		<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 			<div class="divider"></div>
 			<ul class="nav menu">
-				<li><a href="./contacts.html">Active Contacts</a></li>
+				<li><a href="./activeContacts.html">Active Contacts</a></li>
 				<li><a href="./invalidContacts.html">Invalid Contacts</a></li>
 				<li class="active"><a href="./addContact.html">Add New Contact</a></li>
 			</ul>
@@ -217,7 +217,6 @@
             window.location = './generate_license.html';
         });
     </script>
-    <script src="js/ValidateUrl.js"></script>
-    <script src="js/Snauth.js"></script>
+    <script src="js/awsugblr.js"></script>
     </body>
 </html>
