--- a/web/invalidContacts.html
+++ b/web/invalidContacts.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Dashboard</title>
+		<title>AWSUGBLR - Invalid Contacts</title>
 		<link rel="icon" href="img/Bi2i-square-logo-500x500.png" type="image/png" sizes="16x16">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
@@ -44,17 +44,16 @@
 		<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 			<div class="divider"></div>
 			<ul class="nav menu">
-				<li><a href="./users.html">Active Users</a></li>
-				<li><a href="./request_users.html">Login Requests</a></li>
-				<li class="active"><a href="./blocked_users.html">Blocked Users</a></li>
-				<li><a href="./generate_license.html">Generate License</a></li>
+				<li><a href="./activeContacts.html">Active Contacts</a></li>
+				<li class="active"><a href="./invalidContacts.html">Invalid Contacts</a></li>
+				<li><a href="./addContact.html">Add New Contact</a></li>
 			</ul>
 		</div><!--/.sidebar-->
 
 		<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
 			<div class="row">
 				<div class="col-lg-12" style="margin: -10px 0px;">
-					<h1 class="page-header">Blocked Users</h1>
+					<h1 class="page-header">Invalid Contacts</h1>
 				</div>
 			</div><!--/.row-->
 
@@ -80,7 +79,7 @@
 				</div><!--/.col-->
 
 				<div class="col-sm-12 footer">
-                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://bridgei2i.com/">BRIDGEi2i Analytics Solutions</a></span></p>
+                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://awsugblr.in/">AWS User Group Bengaluru</a></span></p>
 				</div>
 			</div><!--/.row-->
 		</div>	<!--/.main-->
@@ -91,7 +90,6 @@
         	listBlockedUsers();
         });
     </script>
-    <script src="js/ValidateUrl.js"></script>
-    <script src="js/Snauth.js"></script>
+    <script src="js/awsugblr.js"></script>
     </body>
 </html>
