Pages updated to look and feel of awsugblr

--- a/web/addContact.html
+++ b/web/addContact.html
@@ -20,14 +20,14 @@
 		<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#"><img id="logo" src="./img/SNAuth1.png"></a>
+					<a class="navbar-brand" href="#"><img id="logo" src="./img/awsugblr_emailrepo.png"></a>
 					<div style="float:right;">
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
 							<li class="dropdown">
 								<a style="width:auto;padding-top:5px;" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 									<i class="fa fa-user-circle" style="font-size:26px;"></i>
-									<span id="uname"> User </span><span class="caret"></span>
+									<span id="uname">AWSUGBLR</span><span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
 									<li>
@@ -64,10 +64,14 @@
                         <form>
                             <p id="common-error">Error: Enter Valid Email_ID</p>
                             <div class="row">
+                                <div id="email-input" class="col-md-2">Full Name:</div>
+                                <input class="col-md-7 common-style-input set-email-style" type="text" id="email" required="required" autofocus/>
+                            </div>
+                            <div class="row">
                                 <div id="email-input" class="col-md-2">*Email :</div>
                                 <input class="col-md-7 common-style-input set-email-style" type="text" id="email" required="required" autofocus/>
-                                <button class="col-md-2 common-style-input btn-size" id="submit">Submit</button>
                             </div>
+                            <div><button class="col-md-2 common-style-input btn-size" id="submit">Add</button></div>
 
                             <div class="clear"></div>
 
