--- a/web/activeContacts.html
+++ b/web/activeContacts.html
@@ -11,14 +11,38 @@
         <link href="css/nsans.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<!-- <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+		<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#"><img id="logo" src="./img/awsugblr_emailrepo.png"></a>
+					<div style="float:right;">
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<ul class="nav navbar-nav navbar-right">
+							<li class="dropdown">
+								<a style="width:auto;padding-top:5px;" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+									<i class="fa fa-user-circle" style="font-size:26px;"></i>
+									<span id="uname">AWSUGBLR</span><span class="caret"></span>
+								</a>
+								<ul class="dropdown-menu">
+									<li>
+										<a href="" id="logout" class="btn btn-link btn-logout">Logout</a>
+									</li>
+								</ul>
+							</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div><!-- /.container-fluid -->
 		</nav>
 		<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 			<div class="divider"></div>
 			<ul class="nav menu">
-				<li class="active"><a href="./contacts.html">Contacts</a></li>
+				<li class="active"><a href="./activeContacts.html">Active Contacts</a></li>
+				<li><a href="./invalidContacts.html">Invalid Contacts</a></li>
+				<li><a href="./addContact.html">Add New Contact</a></li>
 			</ul>
-		</div> -->
+		</div><!--/.sidebar-->
 
 		<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
 			<div class="row">
@@ -33,10 +57,9 @@
 						<table id="users-list" class="table">
 							<thead style="background-color: #019847;color:white;">
 								<tr>
-									<th>First Name</th>
-									<th>Last Name</th>
+									<th>Full Name</th>
 									<th>Email Address</th>
-									<th>DND/Invalid</th>
+									<th>Action</th>
 								</tr>
 							</thead>
 							<tbody>
