--- a/web/invalidContacts.html
+++ b/web/invalidContacts.html
@@ -20,14 +20,14 @@
 		<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#"><img id="logo" src="./img/SNAuth1.png"></a>
+					<a class="navbar-brand" href="#"><img id="logo" src="./img/awsugblr_emailrepo.png"></a>
 					<div style="float:right;">
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
 							<li class="dropdown">
 								<a style="width:auto;padding-top:5px;" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 									<i class="fa fa-user-circle" style="font-size:26px;"></i>
-									<span id="uname"> User </span><span class="caret"></span>
+									<span id="uname">AWSUGBLR</span><span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
 									<li>
@@ -64,10 +64,9 @@
 							<thead style="background-color: #019847;color:white;">
 								<tr>
 									<th>#</th>
-									<th>Name</th>
+									<th>Full Name</th>
 									<th>Email Address</th>
 									<th>Comments</th>
-									<th>Status</th>
 									<th>Action</th>
 								</tr>
 							</thead>
