Logic for AddNewContact, ActiveContacts, InvalidContacts, ListAll

--- a/web/addContact.html
+++ b/web/addContact.html
@@ -64,12 +64,12 @@
                         <form>
                             <p id="common-error">Error: Enter Valid Email_ID</p>
                             <div class="row">
-                                <div id="email-input" class="col-md-2">Full Name:</div>
-                                <input class="col-md-7 common-style-input set-email-style" type="text" id="email" required="required" autofocus/>
+                                <div id="email-input" class="col-md-2">*Email :</div>
+                                <input class="col-md-7 common-style-input set-email-style" type="text" id="email" required="required" maxlength="100" autofocus/>
                             </div>
                             <div class="row">
-                                <div id="email-input" class="col-md-2">*Email :</div>
-                                <input class="col-md-7 common-style-input set-email-style" type="text" id="email" required="required" autofocus/>
+                                <div id="fullname-input" class="col-md-2">Full Name:</div>
+                                <input class="col-md-7 common-style-input set-email-style" type="text" id="fullname" required="required" maxlength="100" autofocus/>
                             </div>
                             <div><button class="col-md-2 common-style-input btn-size" id="submit">Add</button></div>
 
