Implement functionalities for active and invalid contacts

--- a/web/activeContacts.html
+++ b/web/activeContacts.html
@@ -54,9 +54,10 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-responsive">
-						<table id="users-list" class="table">
+						<table id="contacts-list" class="table">
 							<thead style="background-color: #019847;color:white;">
 								<tr>
+									<th>#</th>
 									<th>Full Name</th>
 									<th>Email Address</th>
 									<th>Action</th>
@@ -76,7 +77,7 @@
 
 		<script>
             $(document).ready(function(){
-				showUserInfo();
+				showActiveContacts();
             });
         </script>
 		<script src="js/awsugblr.js"></script>
