--- a/web/invalidContacts.html
+++ b/web/invalidContacts.html
@@ -60,7 +60,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-responsive">
-						<table id="users-list" class="table">
+						<table id="contacts-list" class="table">
 							<thead style="background-color: #019847;color:white;">
 								<tr>
 									<th>#</th>
@@ -85,8 +85,8 @@
 	
     <script>
         $(document).ready(function(){
-        	checkEnvironment();
-        	listBlockedUsers();
+        	// checkEnvironment();
+        	showInvalidContacts();
         });
     </script>
     <script src="js/awsugblr.js"></script>
