--- a/web/addContact.html
+++ b/web/addContact.html
@@ -70,8 +70,14 @@
                             <div class="row">
                                 <div id="fullname-input" class="col-md-2">Full Name:</div>
                                 <input class="col-md-7 common-style-input set-email-style" type="text" id="fullname" required="required" maxlength="100" autofocus/>
-                            </div>
-                            <div><button class="col-md-2 common-style-input btn-size" id="submit">Add</button></div>
+							</div>
+							<div class="row">
+								<div class="col-sm-4"></div>
+								<div class="col-sm-4" style="margin:auto;">
+									<button type="button" class="btn btn-primary btn-block btn-large" onclick="" id="login-submit">Add Contact</button>
+								</div>
+								<div class="col-sm-4"></div>
+							</div>
 
                             <div class="clear"></div>
 
