--- a/web/addContact.html
+++ b/web/addContact.html
@@ -74,13 +74,12 @@
 							<div class="row">
 								<div class="col-sm-4"></div>
 								<div class="col-sm-4" style="margin:auto;">
-									<button type="button" class="btn btn-primary btn-block btn-large" onclick="" id="login-submit">Add Contact</button>
+									<button type="button" class="btn btn-primary btn-block btn-large" onclick="addNewContact({email : email.value, fullname : fullname.value})" id="add-submit">Add Contact</button>
 								</div>
 								<div class="col-sm-4"></div>
 							</div>
 
                             <div class="clear"></div>
-
                         </form>
                     </div>
 				</div><!--/.col-->
