Active and Invalid contacts - initial work

--- a/web/activeContacts.html
+++ b/web/activeContacts.html
@@ -25,7 +25,7 @@
 								</a>
 								<ul class="dropdown-menu">
 									<li>
-										<a href="" id="logout" class="btn btn-link btn-logout">Logout</a>
+										<a href="./index.html" id="logout" class="btn btn-link btn-logout">Logout</a>
 									</li>
 								</ul>
 							</li>
