Fixed CSS issue and proper id to show the error

--- a/web/addContact.html
+++ b/web/addContact.html
@@ -61,14 +61,16 @@
 				<div class="col-md-12">
 
                     <div class="snauth-page">
+						<div class="row tag-margin">
+							<p id="error" class="tag-margin">*Error: Enter valid email address.</p>
+						</div>
                         <form>
-                            <p id="common-error">Error: Enter Valid Email_ID</p>
                             <div class="row">
-                                <div id="email-input" class="col-md-2">*Email :</div>
+                                <div id="email-input" class="col-md-2">*Email:</div>
                                 <input class="col-md-7 common-style-input set-email-style" type="text" id="email" required="required" maxlength="100" autofocus/>
                             </div>
                             <div class="row">
-                                <div id="fullname-input" class="col-md-2">Full Name:</div>
+                                <div id="fullname-input" class="col-md-2">*Full Name:</div>
                                 <input class="col-md-7 common-style-input set-email-style" type="text" id="fullname" required="required" maxlength="100" autofocus/>
 							</div>
 							<div class="row">
