--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
 				</div>
 			</form>
 		</div>
-		<script src="js/login.js"></script>
+		<script src="js/keypress.js"></script>
 		<script src="js/sha256logic.js"></script>
 		<script src="js/awsugblr.js"></script>
 	</body>
