Open awsugblr.in in separate window and logout redirection for missing page

--- a/web/addContact.html
+++ b/web/addContact.html
@@ -31,7 +31,7 @@
 								</a>
 								<ul class="dropdown-menu">
 									<li>
-										<a href="" id="logout" class="btn btn-link btn-logout">Logout</a>
+										<a href="./index.html" id="logout" class="btn btn-link btn-logout">Logout</a>
 									</li>
 								</ul>
 							</li>
@@ -86,7 +86,7 @@
 				</div><!--/.col-->
 
 				<div class="col-sm-12 footer">
-                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://awsugblr.in/">AWS User Group Bengaluru</a></span></p>
+                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://awsugblr.in/" target="_blank_">AWS User Group Bengaluru</a></span></p>
 				</div>
 			</div><!--/.row-->
 		</div>	<!--/.main-->
