--- a/web/invalidContacts.html
+++ b/web/invalidContacts.html
@@ -77,7 +77,7 @@
 				</div><!--/.col-->
 
 				<div class="col-sm-12 footer">
-                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://awsugblr.in/">AWS User Group Bengaluru</a></span></p>
+                    <p class="back-link">&#169; <span id="cur-year"></span> All rights reserved. <a style="text-decoration:none;color:white;" href="http://awsugblr.in/" target="_blank_">AWS User Group Bengaluru</a></span></p>
 				</div>
 			</div><!--/.row-->
 		</div>	<!--/.main-->
